chapter-04/section-01/*eshell*
Welcome to the Emacs shell

~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
ran
0
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
ran
0
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
ditch.cc: In function ‘int main()’:
ditch.cc:52:23: error: name lookup of ‘i’ changed for ISO ‘for’ scoping [-fpermissive]
       if (matrix[m.m][i]){
                       ^
ditch.cc:52:23: note: (if you use ‘-fpermissive’ G++ will accept your code)
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
ditch.cc: In function ‘int main()’:
ditch.cc:52:23: error: name lookup of ‘i’ changed for ISO ‘for’ scoping [-fpermissive]
       if (matrix[m.m][i]){
                       ^
ditch.cc:52:23: note: (if you use ‘-fpermissive’ G++ will accept your code)
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0
0
0
0
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
1240
1420
2420
2330
3410
0
0
0
0
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 1 0
0 2 0
0 3 0
0 4 0
0 0
1 0
2 2147483647
3 2147483647
4 2147483647
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
matrix1][2]40
not visited
40
matrix1][4]20
not visited
20
matrix2][3]30
not visited
70
matrix2][4]20
matrix3][4]10
0 0
1 0
2 40
3 70
4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 40
3 70
4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0 0
1 0
2 40
3 70
4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
1 0
2 40
3 70
4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
1 0
2 40
3 70
4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
1 4 20
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
0
1
2
1
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
1:0
2:1
3:2
4:1
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
interrupt
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./.aout
./.aout: command not found
~/u/chapter-04/section-01 :master $ 
~/u/chapter-04/section-01 :master $ ./a.out
0 40 0 20 
0 0 30 20 
0 0 0 10 
0 0 0 0 
interrupt
~/u/chapter-04/section-01 :master $ ./a.out
0 40 0 20 
0 0 30 20 
0 0 0 10 
0 0 0 0 
interrupt
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
50
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
0
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
0
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
0
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
50
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
2474753
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
2616860
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
2616860
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
2474753
~/u/chapter-04/section-01 :master $ g++ ditch.cc 
~/u/chapter-04/section-01 :master $ ./a.out
~/u/chapter-04/section-01 :master $ cat ditch.out
2616860
~/u/chapter-04/section-01 :master $ g++ ditch.cc  && ./a.out && cat ditch.out
2616860
~/u/chapter-04/section-01 :master $ g++ ditch.cc  && ./a.out && cat ditch.out
2474753
~/u/chapter-04/section-01 :master $ 